# lamella

./: Cargo.toml  LICENSE-APACHE  README.md  host_app_old
firmware/: Cargo.toml
firmware-c3/: Cargo.toml
firmware-c3/tests/: hello_test.rs
firmware-s3/: Cargo.toml
host/: Cargo.toml
host/src/: bridge.rs  main.rs  nusb_transport.rs  serial_transport.rs
icd/: Cargo.toml
icd/src/: lib.rs
