[package]
edition = "2024"
name = "firmware"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4"

esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-usb = { version = "0.5.0", default-features = false }
embassy-futures = "0.1"

esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32s3",
    "log-04",
    "unstable",
    "wifi",
] }

# Ergot and related
ergot = { git = "https://github.com/jamesmunns/ergot", features = [
    "embassy-usb-v0_5",
] }
bbq2 = { version = "0.4", default-features = false, features = ["maitake-sync-0_2", "critical-section"] }
mutex = { version = "1.0", features = ["impl-critical-section"] }
maitake-sync = { version = "0.2", default-features = false }

# ICD
icd = { path = "../icd" }

critical-section = "1.2.0"
static_cell = "2.1.1"
heapless = "0.9.2"
embassy-net-driver = "0.2.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
