[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
ergot = { git = "https://github.com/jamesmunns/ergot", features = ["nusb-v0_1"] }
icd = { path = "../icd" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
log = "0.4"
env_logger = "0.11"
postcard-schema = { version = "0.2", features = ["derive"] }
serde = "1.0"
heapless = "0.9"
tun-rs = { version = "2.7.7", features = ["async"] }
nusb = "0.1.14"
