[package]
name = "host"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ergot = { git = "https://github.com/okhsunrog/ergot", branch = "for_lamella", features = ["nusb-v0_1", "tokio-serial-v5"] }
icd = { path = "../icd" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
log = "0.4"
env_logger = "0.11"
postcard-schema = { version = "0.2", features = ["derive"] }
serde = "1.0"
heapless = "0.9"
tun-rs = { version = "2.7.7", features = ["async"] }
nusb = "0.1.14"
clap = { version = "4.5.54", features = ["derive"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.18", features = ["rt"] }
